# api/openapi.yaml
@@ -57,6 +57,8 @@ components:
           $ref: '#/components/schemas/config.DbConfig'
         docs:
           $ref: '#/components/schemas/config.DocsConfig'
+        idempotency:
+          $ref: '#/components/schemas/config.IdempotencyConfig'
         kafka:
           $ref: '#/components/schemas/config.KafkaConfig'
         log:
@@ -230,6 +232,13 @@ components:
           type: string
         enabled:
           $ref: '#/components/schemas/config.BoolConfig'
+      type: object
+    config.IdempotencyConfig:
+      properties:
+        description:
+          type: string
+        ttlMinutes:
+          $ref: '#/components/schemas/config.IntConfig'
       type: object
     config.IntConfig:
       properties:
